--- a/assets/continuum/cp.css
+++ b/assets/continuum/cp.css
@@ -1,25 +1,25 @@
+/* 
+  base 
+  rgb(220, 81, 114)
+
+  dark
+  rgb(183, 67, 95)
+*/
+
+@import 'base.css';
+
 .book .book-summary {
   background-color: rgb(220, 81, 114);
-  background-image: url(logo-cp-white.png);
-  background-repeat: no-repeat;
-  background-position: 10px 10px;
-  background-size: 50px;
   box-shadow: inset -4px 0 0 rgb(183, 67, 95);
-  font-size: 1em;
 }
 
 .book .book-summary ul.summary {
   background-color: rgb(220, 81, 114);
+  background-image: url(logo-cms-white.png);
   box-shadow: inset -4px 0 0 rgb(183, 67, 95);
-  margin-top: 70px;
-}
-
-.book .book-summary ul.summary li a {
-  color: white;
 }
 
 .book .book-summary ul.summary li a:hover,
 .book .book-summary ul.summary li.active a {
   background-color: rgb(183, 67, 95);
-  color: white;
 }
